Bug 99925 - StartCenter: "Open" and "Open Remote File" duplicated - odd additional bar at the top
Summary: StartCenter: "Open" and "Open Remote File" duplicated - odd additional bar at...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Szymon Kłos
URL:
Whiteboard: target:5.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-05-18 08:21 UTC by steve
Modified: 2016-10-25 19:02 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
startcenter additional top bar (56.10 KB, image/png)
2016-05-18 08:22 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2016-05-18 08:21:41 UTC
User-Agent:       Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:46.0) Gecko/20100101 Firefox/46.0
Build Identifier: LibreOffice 5.2.0.0.alpha1

open latest master
see additional bar at top of startcenter, duplicating existing functionality

Reproducible: Always

Steps to Reproduce:
1. open latest master startcenter
2. look (screenshot attached)
Actual Results:  
odd additional bar

Expected Results:  
no additional bar

[Information automatically included from LibreOffice]
Locale: en-US
Module: StartModule
[Information guessed from browser]
OS: Mac OS X (All)
OS is 64bit: no


Reset User Profile?No
Comment 1 steve 2016-05-18 08:22:09 UTC
Created attachment 125138 [details]
startcenter additional top bar
Comment 2 Samuel Mehrbrodt 2016-05-18 08:30:20 UTC
You have the notebookbar enabled. These are placeholder buttons there.
Comment 3 Maxim Monastirsky 2016-05-18 08:39:31 UTC
(In reply to Samuel Mehrbrodt (CIB) from comment #2)
> You have the notebookbar enabled. These are placeholder buttons there.
Samuel: The problem is that it's enabled in the start center unconditionally, and there is no way (even .uno command) to hide it. We definitely don't want to show it by default in its current state...
Comment 4 Samuel Mehrbrodt 2016-05-18 08:44:33 UTC
(In reply to Maxim Monastirsky from comment #3)
> Samuel: The problem is that it's enabled in the start center
> unconditionally, and there is no way (even .uno command) to hide it. We
> definitely don't want to show it by default in its current state...

Ah I see.
@Szymon, could you look after this?
Comment 5 Commit Notification 2016-05-18 18:00:15 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=83e400de42d71ef6fbd007100eecfb46162c3002

tdf#99925 temporary fix, hide the notebookbar in the start center

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 steve 2016-05-19 09:41:06 UTC
Thanks.
Fixed + verified.

Version: 5.2.0.0.alpha1+
Build ID: 389d8db4d90d427f886d06c3f7304ad973f0d39c
CPU Threads: 4; OS Version: Mac OS X 10.11.5; UI Render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2016-05-18_22:56:51
Locale: nl-NL (de.UTF-8)