tdf#99925 temporary fix, hide the notebookbar in the start center

Change-Id: I1fcf89d59a0f69a565beea1b2da900c2a9394d82